# swagger-output.json
@@ -5,7 +5,7 @@
     "description": "Zikr App API",
     "version": "1.0.0"
   },
-  "host": "zikr-backend.onrender.com",
+  "host": "api.zikr.ae",
   "basePath": "/",
   "schemes": [
     "https"
@@ -865,6 +865,41 @@
           },
           "403": {
             "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "440": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/users/update/{type}": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "type",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "x-auth-token",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -2348,9 +2383,6 @@
           },
           "401": {
             "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
           },
           "440": {
             "description": ""
